Fixed title and alignment of stories

--- a/stories.css
+++ b/stories.css
@@ -1,6 +1,12 @@
 main {
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
     align-items: flex-start;
 }
 
@@ -10,6 +16,7 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     column-gap: 50px;
     row-gap: 50px;
+    align-items: center;
 }
 
 /* The grid and the add button don't go all the way to the right of the page. 
